update new config

--- a/.inputrc
+++ b/.inputrc
@@ -1,2 +1,5 @@
+set bind-tty-special-chars off
+"\C-u": kill-whole-line
+"\C-w": backward-kill-word
 "\e[1;5C": forward-word
 "\e[1;5D": backward-word
